updated image class

--- a/index.html
+++ b/index.html
@@ -58,57 +58,58 @@
       <a href="about.html" class="secondary-link"  title="About Singo Cynthia">About me</a>
     </div>
     <div class="container">
-      <div class="row">
-        <div class="col-6">
-          <img src="yoga.png" class="img-fluid rounded change" />
+        <div class="row">
+          <div class="col-6">
+            <img src="yoga.png" class="img-fluid rounded d-none d-sm-block" />
+          </div>
+          <div class="col-6">
+            <h2 class="mb-3">Yoga app</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+              eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo
+              eum dolore.
+            </p>
+            <div class="mt-5">
+              <a href="#" class="primary-link project-link" title="Launch Yoga-app">Launch Yoga App</a>
+            </div>
+          </div>
         </div>
-        <div class="col-6">
-          <h2 class="mb-3">Yoga app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link" title="Launch Yoga-app">Launch Yoga App</a>
+        <div class="row mt-5">
+          <div class="col-6">
+            <h2 class="mb-3">Weather app</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+              eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo
+              eum dolore.
+            </p>
+            <div class="mt-5">
+              <a href="#" class="primary-link project-link" title="Launch Weather-app">Launch Weather App</a>
+            </div>
+          </div>
+          <div class="col-6">
+            <img src="weather.png" class="img-fluid rounded d-none d-sm-block" />
+          </div>
+        </div>
+        <div class="row mt-5">
+          <div class="col-6">
+            <img src="yogurt.png" class="img-fluid rounded d-none d-sm-block" />
+          </div>
+          <div class="col-6">
+            <h2 class="mb-3">Yogurt app</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
+              quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
+              eos eveniet alias temporibus deserunt veritatis minima fugiat explicabo
+              eum dolore.
+            </p>
+            <div class="mt-5">
+              <a href="#" class="primary-link project-link" title="Launch Yogurt-app">Launch Yogurt App</a>
+            </div>
           </div>
         </div>
       </div>
-      <div class="row mt-5">
-        <div class="col-6">
-          <h2 class="mb-3">Weather app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link" title="Launch Weather-app">Launch Weather App</a>
-          </div>
-        </div>
-        <div class="col-6">
-          <img src="weather.png" class="img-fluid rounded  change"  />
-        </div>
-      </div>
-      <div class="row mt-5">
-        <div class="col-6">
-          <img src="yogurt.png" class="img-fluid rounded change" />
-        </div>
-        <div class="col-6">
-          <h2 class="mb-3">Yogurt app</h2>
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
-            quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
-            eos eveniet alias temporibus deserunt veritatis minima fugiat
-            explicabo eum dolore.
-          </p>
-          <div class="mt-5">
-            <a href="#" class="primary-link" title="Launch Yogurt-app">Launch Weather App</a>
-          </div>
-        </div>
-      </div>
-    </div>
+      
   </body>
 </html>
