--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
               <a href="#" class="primary-link project-link" title="Launch Weather-app">Launch Weather App</a>
             </div>
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <img src="weather.png" class="img-fluid rounded d-none d-sm-block" />
           </div>
         </div>
         <div class="row mt-5">
-          <div class="col-6">
+          <div class="col-sm-6">
             <img src="yogurt.png" class="img-fluid rounded d-none d-sm-block" />
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <h2 class="mb-3">Yogurt app</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
