--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
     </div>
     <div class="container">
         <div class="row">
-          <div class="col-6">
+          <div class="col-sm-6">
             <img src="yoga.png" class="img-fluid rounded d-none d-sm-block" />
           </div>
-          <div class="col-6">
+          <div class="col-sm-6">
             <h2 class="mb-3">Yoga app</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="row mt-5">
-          <div class="col-6">
+          <div class="col-sm-6">
             <h2 class="mb-3">Weather app</h2>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
